Fix alignment of menus

--- a/assets/main.css
+++ b/assets/main.css
@@ -797,7 +797,7 @@ p {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
   }
 }
 .footer__heading {
