--- a/assets/styles/sections/_footer.sass
+++ b/assets/styles/sections/_footer.sass
@@ -14,7 +14,7 @@
         width: 100%
 
         @include mixins.small-medium
-            @include mixins.flex(row nowrap, space-around, center)
+            @include mixins.flex(row nowrap, space-around, flex-start)
 
     &__heading
         font-size: inherit
